--- a/themes/medis/style.css
+++ b/themes/medis/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: BasicTheme
+Theme Name: Medis
 Theme URI: https://github.com/lathieuhiep/WPBuilderKit.git
 Author: DiepLK
 Author URI: https://github.com/lathieuhiep
 Version: 1.0.0
-Description: Basic Theme
+Description: Medis Theme
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, three-columns, four-columns, right-sidebar, theme-options
